--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
   <body>
     <div id="main">
       <h1 id="header">GitHub Issue Tracker</h1>
+      <progress class="progress is-large is-info" max="100" style="display:none;">60%</progress>
       <div id="formDiv">
         <form id="form">
           <label for="organization">Type in your organization's name: </label>
